--- a/sass/style.css
+++ b/sass/style.css
@@ -60,7 +60,7 @@ body li {
 }
 
 .lettre {
-  margin-bottom: 5em;
+  margin-top: 3em;
   color: #9356dc;
   font-size: 3em;
   letter-spacing: 5px;
@@ -187,7 +187,7 @@ header .logo {
 
 .formulaire {
   /*recherche en fonction de la ville*/
-  width: 99%;
+  width: 100%;
   height: 3.5em;
   text-align: center;
   background-color: lightgrey;
